argocd-arm/auto-sindico-arm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auto-sindico
  name: auto-sindico
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auto-sindico
  template:
    metadata:
      labels:
        app: auto-sindico
    spec:
      containers:
        - image: cbeloni/auto-sindico:arm64
          imagePullPolicy: Always
          name: auto-sindico
          ports:
            - containerPort: 8000
