argocd-arm/auto-sindico-arm-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: auto-sindico-svc
spec:
  type: ClusterIP
  selector:
    app: auto-sindico
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-sindico-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: auto-sindico.192.168.0.201.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auto-sindico-svc
                port:
                  number: 80
    - host: auto-sindico.beloni.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auto-sindico-svc
                port:
                  number: 80
